[gd_scene load_steps=5 format=3 uid="uid://dl32r6ltet6kx"]

[ext_resource type="Texture2D" uid="uid://dxhrj1lbff4tg" path="res://scenes/gui/dialog_box/resources/textures/gui-dialog-box.png" id="1_6trig"]
[ext_resource type="Script" path="res://scenes/gui/dialog_box/dialog_box.gd" id="1_ih41e"]
[ext_resource type="FontFile" uid="uid://7ifmntxrukr8" path="res://shared_resources/fonts/kenvector_future_thin.ttf" id="3_0hjje"]
[ext_resource type="AudioStream" uid="uid://c5dm557ig4wna" path="res://scenes/gui/dialog_box/resources/audio/character_dialog.mp3" id="4_i84pj"]

[node name="DialogBox" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ih41e")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_6trig")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0hjje")
theme_override_font_sizes/font_size = 8
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="DialogAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_i84pj")
pitch_scale = 0.8

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
